--- a/petmemorial/templates/petmemorial/memorial.html
+++ b/petmemorial/templates/petmemorial/memorial.html
@@ -23,7 +23,7 @@
     </div>
     <div class="page">
       <!-- Page Header-->
-      <header class="section page-header">
+      <header clas"section page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
           <nav class="rd-navbar rd-navbar-modern context-dark" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
@@ -105,7 +105,7 @@
     <div class="row mb-5">
       <div class="col-lg-8 mx-auto text-center">
         <h3>Bella - A Life Well Lived</h3>
-        <p><strong>Breed:</strong> Golden Retriever | <strong>Age:</strong> 12 | <strong>Traits:</strong> Loyal, Gentle, Joyful</p>
+        <p><strong>Breed:</strong> Golden Retriever | <strong>Age:</strong> 17   | <strong>Traits:</strong> Loyal, Gentle, Joyful</p>
       </div>
     </div>
 
