--- a/petmemorial/templates/petmemorial/index.html
+++ b/petmemorial/templates/petmemorial/index.html
@@ -35,14 +35,14 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="{% static 'images/logo.webp' %}" alt="" width="151" height="42"/><img class="brand-logo-light" src="{% static 'images/logo.webp' %}" alt="" width="151" height="42"/></a>
+                    <!--Brand--><a class="brand" href="{% url 'home' %}"><img class="brand-logo-dark" src="{% static 'images/logo.webp' %}" alt="" width="151" height="42"/><img class="brand-logo-light" src="{% static 'images/logo.webp' %}" alt="" width="151" height="42"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-main-element">
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'home' %}">Home</a>
                       </li>
                       <li class="rd-nav-item"><a href="{% url 'memorial' %}" class="rd-nav-link">Memorial</a>
 
