added menu item blog post

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -32,6 +32,7 @@
               <ul class="rd-navbar-nav">
                 <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'home' %}">Home</a></li>
                 <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'memorial' %}">Memorial</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'blog_post' year=2025 month=4 slug='b' %}">Blog Post</a></li>
                 <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
               </ul>
             </div>
