--- a/petmemorial/templates/petmemorial/index.html
+++ b/petmemorial/templates/petmemorial/index.html
@@ -1,66 +1,9 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html class="wide wow-animation" lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:300,400,500,600,700%7CPlayfair+Display:400,400i,700,900%7CPoppins:300">
-    <link rel="stylesheet" href="{% static '' %}css/bootstrap.css">
-    <link rel="stylesheet" href="{% static '' %}css/fonts.css">
-    <link rel="stylesheet" href="{% static '' %}css/style.css">
-    <link rel="stylesheet" href="{% static '' %}css/mycss.css">
-  </head>
-  <body>
-    <div class="preloader">
-      <div class="preloader-body">
-        <div class="cssload-container">
-          <div class="cssload-speeding-wheel"></div>
-        </div>
-      </div>
-    </div>
-    <div class="page">
-      <!-- Page Header-->
-      <header class="section page-header">
-        <!-- RD Navbar-->
-        <div class="rd-navbar-wrap">
-          <nav class="rd-navbar rd-navbar-modern context-dark" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
-            <div class="rd-navbar-main-outer">
-              <div class="rd-navbar-main">
-                <!-- RD Navbar Panel-->
-                <div class="rd-navbar-panel">
-                  <!-- RD Navbar Toggle-->
-                  <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                  <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="{% url 'home' %}"><img class="brand-logo-dark" src="{% static 'images/logo.webp' %}" alt="" width="151" height="42"/><img class="brand-logo-light" src="{% static 'images/logo.webp' %}" alt="" width="151" height="42"/></a>
-                  </div>
-                </div>
-                <div class="rd-navbar-main-element">
-                  <div class="rd-navbar-nav-wrap">
-                    <!-- RD Navbar Nav-->
-                    <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'home' %}">Home</a>
-                      </li>
-                      <li class="rd-nav-item"><a href="{% url 'memorial' %}" class="rd-nav-link">Memorial</a>
+{% block title %}Blog Post | Pet Heaven{% endblock %}
 
-                      </li>
-
-
-
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </nav>
-        </div>
-      </header>
-      <!-- Swiper-->
+{% block content %}
+    <!-- Swiper-->
       <section class="section section-lg section-main-bunner">
         <div class="main-bunner-img" style="background-image: url('{% static 'images/header-bg.webp' %}'); background-size: cover;"></div>
         <div class="main-bunner-inner">
@@ -322,68 +265,4 @@
           </div>
         </div>
       </section>
-
-
-      <!-- Page Footer-->
-      <footer class="section footer-classic context-dark">
-        <div class="container">
-          <div class="row row-50">
-            <div class="col-lg-8 order-lg-2 ps-xl-5 wow-outer">
-              <div class="wow slideInRight">
-                <div class="row row-50">
-                  <div class="col-12">
-                    <h5 class="footer-title">Subscribe & Stay Updated</h5>
-                    <!-- RD Mailform-->
-                    <form class="rd-mailform text-start rd-form-inline" data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php">
-                      <div class="form-wrap">
-                        <label class="form-label" for="subscribe-email">E-mail</label>
-                        <input class="form-input" id="subscribe-email" type="email" name="email" data-constraints="@Email @Required">
-                      </div>
-                      <div class="form-button group-sm text-center text-lg-start">
-                        <button class="button button-lg button-white-outline" type="submit">subscribe</button>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="col-md-6">
-                    <h5 class="footer-title">Contacts</h5>
-                    <ul class="list-contact-info">
-                      <li><span class="icon mdi mdi-map-marker icon-md icon-secondary"></span><span class="list-item-text"><a href="#">51 Francis Street, Darlinghurst NSW 2010, United States</a></span></li>
-                      <li><span class="icon mdi mdi-phone icon-md icon-secondary"></span><span class="list-item-text"><a href="tel:#">1-800-123-1234</a></span></li>
-                    </ul>
-                  </div>
-                  <div class="col-md-6">
-                    <h5 class="footer-title">Get Social</h5>
-                    <p class="big">Follow us to stay connected and receive instant updates.</p>
-                    <ul class="social-list">
-                      <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="#"></a></li>
-                      <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="#"></a></li>
-                      <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-twitter" href="#"></a></li>
-                      <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="#"> </a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 order-lg-1 pe-xl-5 wow-outer">
-              <div class="wow slideInLeft">
-                <div class="row row-30">
-                  <div class="col-12">
-                    <!--Brand--><a class="brand" href="index.html"><img class="brand-logo-dark" src="{% static 'images/logo.webp' %}" alt="" /><img class="brand-logo-light" src="{% static 'images/logo.webp' %}" alt="" /></a>
-                  </div>
-                  <div class="col-12">
-                    <p>Amour provides a focused approach towards the wedding planning segment. With years of experience in the event industry, we stand on a stronger base with the most creative, enthusiastic and committed team.</p>
-                    <div class="footer-divider"></div>
-                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Amour</span><span>.&nbsp;All Rights Reserved.&nbsp;</span><a href="privacy-policy.html">Privacy Policy</a></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
-    </div>
-    <div class="snackbars" id="form-output-global"></div>
-    <script src="{% static 'js/core.min.js' %}"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-  </body>
-</html>
+{% endblock %}
