Added Amyboulecat to footer

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,18 +5,7 @@
       <div class="col-lg-8 order-lg-2 ps-xl-5 wow-outer">
         <div class="wow slideInRight">
           <div class="row row-50">
-            <div class="col-12">
-              <h5 class="footer-title">Subscribe & Stay Updated</h5>
-              <form class="rd-mailform text-start rd-form-inline" data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php">
-                <div class="form-wrap">
-                  <label class="form-label" for="subscribe-email">E-mail</label>
-                  <input class="form-input" id="subscribe-email" type="email" name="email" data-constraints="@Email @Required">
-                </div>
-                <div class="form-button group-sm text-center text-lg-start">
-                  <button class="button button-lg button-white-outline" type="submit">subscribe</button>
-                </div>
-              </form>
-            </div>
+
             <div class="col-md-6">
               <h5 class="footer-title">Contacts</h5>
               <ul class="list-contact-info">
@@ -52,4 +41,8 @@
       </div>
     </div>
   </div>
+    <div class="container-fluid text-center py-4 bg-light">
+  <p class="big mb-0 mt-4" style="font-size: 1.25rem; font-weight: bold;">For my Amyboulecat. Forever in my heart 🐾💜</p>
+</div>
+
 </footer>
