--- a/petmemorial/templates/petmemorial/memorial.html
+++ b/petmemorial/templates/petmemorial/memorial.html
@@ -23,16 +23,16 @@
   <!-- Actual content -->
   <div class="container text-center position-relative" style="z-index: 2;padding-top:7rem;">
     <img
-      src="{% static 'images/cat4394.jpg' %}"
+      src="{{ p.photo.url }}"
       class="rounded-circle mb-4 img-fluid"
       alt="Pet Photo"
-      width="150"
-      height="150"
+
       style="display: block; margin: 0 auto;"
-    >
-    <h2 class="breadcrumbs-custom-title" style="color:#ffffff">In Loving Memory of Bella</h2>
-    <p class="lead">2011 – 2023</p>
-    <p class="fst-italic">"Forever chasing butterflies in the sky."</p>
+    />
+    <h2 class="breadcrumbs-custom-title" style="color:#ffffff">In Loving Memory {{ p.pet_name}}</h2>
+    <p class="lead">{{ p.year_of_birth }} – {{ p.year_of_death }}</p>
+    <p class="fst-italic">"{{ p.tribute_quote}}"</p>
+     <p class="fst-italic">By {{ p.owner_display_name}}</p>
   </div>
 </section>
 
@@ -45,49 +45,45 @@
     <!-- Pet Bio -->
     <div class="row mb-5">
       <div class="col-lg-8 mx-auto text-center">
-        <h3>Bella - A Life Well Lived</h3>
-        <p><strong>Breed:</strong> Golden Retriever | <strong>Age:</strong> 17   | <strong>Traits:</strong> Loyal, Gentle, Joyful</p>
+        <h3>{{ p.pet_name }} - A Life Well Lived</h3>
+        <p><strong>Species: {{ p.species }} | Breed:</strong> {{ p.breed}} | <strong>Traits:</strong> Loyal, Gentle, Joyful</p>
       </div>
     </div>
 
     <!-- About Pet -->
     <div class="row mb-5">
       <div class="col-lg-8 mx-auto">
-        <h4>About Bella</h4>
-        <p>Bella brought sunshine into every room she entered. From her morning tail wags to evening cuddle sessions, she had a way of making everyone feel special. She loved long walks, peanut butter treats, and her squeaky duck toy more than anything.</p>
-        <p>Bella brought sunshine into every room she entered. From her morning tail wags to evening cuddle sessions, she had a way of making everyone feel special. She loved long walks, peanut butter treats, and her squeaky duck toy more than anything.</p>
-        <p>Bella brought sunshine into every room she entered. From her morning tail wags to evening cuddle sessions, she had a way of making everyone feel special. She loved long walks, peanut butter treats, and her squeaky duck toy more than anything.</p>
-        <p>Bella brought sunshine into every room she entered. From her morning tail wags to evening cuddle sessions, she had a way of making everyone feel special. She loved long walks, peanut butter treats, and her squeaky duck toy more than anything.</p>
+        <h4>About {{ p.pet_name }}</h4>
+        {{ p.about_pet|safe }}
       </div>
     </div>
 
 
 
     <!-- Photo Gallery -->
-<div class="row mb-5">
-  <div class="col-12">
-    <h4 class="text-center">Photo Gallery</h4>
-    <div class="row g-3">
-      <div class="col-md-4">
-        <img src="{% static 'images/cat887.jpg' %}" class="img-fluid rounded mx-auto d-block" alt="Pet photo 1">
+      <div class="row mb-5">
+          <div class="col-12">
+              <h4 class="text-center">{{ p.pet_name }}'s Photo Gallery</h4>
+              <div class="row g-3">
+                  {% for img in p.gallery.all %}
+                      <div class="col-md-4">
+                      <img src="{{ img.image.url }}" class="img-fluid rounded mx-auto d-block" alt="Pet photo 1"/>
+                       </div>
+                  {% endfor %}
+              </div>
+
+
+          </div>
       </div>
-      <div class="col-md-4">
-        <img src="{% static 'images/cat781.jpg' %}" class="img-fluid rounded mx-auto d-block" alt="Pet photo 2">
-      </div>
-      <div class="col-md-4">
-        <img src="{% static 'images/cat4394.jpg' %}" class="img-fluid rounded mx-auto d-block" alt="Pet photo 3">
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
     <!-- YouTube Song -->
     <div class="row mb-5">
       <div class="col-lg-8 mx-auto text-center">
-        <h4 class="mb-4">A Song That Reminds Me of Bella</h4>
+        <h4 class="mb-4">A Song That Reminds Me of {{ p.pet_name }}</h4>
         <div class="ratio ratio-16x9">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/BWf-eARnf6U?si=QLSeo4R6uGNY2o8r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="{{ p.video_url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -95,7 +91,7 @@
     <!-- Virtual Candles & Guest Messages -->
     <div class="row mb-5">
       <div class="col-lg-8 mx-auto">
-        <h4>Light a Candle for Bella</h4>
+        <h4>Light a Candle for {{ p.pet_name }}</h4>
         <form class="mb-4">
           <div class="mb-3">
             <!--<label for="guestName" class="form-label">Your Name (optional)</label>-->
@@ -108,15 +104,18 @@
           <button type="submit" class="btn btn-primary">Light a Candle 🕯️</button>
         </form>
         <div class="guest-messages">
-          <p><strong>Emily:</strong> Bella was truly one of a kind. 🕯️</p>
-          <p><strong>Michael:</strong> Rest in peace sweet girl. 🕯️</p>
+            {% for msg in p.candles.all %}
+          <p><strong>{{ msg.name }}:</strong> {{ msg.message }} 🕯️</p>
+            {% endfor %}
+
         </div>
       </div>
     </div>
   </div>
 </section>
-
 {% endblock %}
+
+
 
 
 
