--- a/petmemorial/templates/registration/login.html
+++ b/petmemorial/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 <div class="container py-5">
@@ -8,5 +9,8 @@
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
+<p class="mt-3">
+  <a href="{% url 'password_reset' %}">Forgot your password?</a>
+</p>
 </div>
 {% endblock %}
