--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -29,11 +29,14 @@
           </div>
           <div class="rd-navbar-main-element">
             <div class="rd-navbar-nav-wrap">
-              <ul class="rd-navbar-nav">
-                <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'home' %}">Home</a></li>
-                <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'memorial' 'sandy' %}">Memorial</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'blog_post' year=2025 month=4 slug='healing-after-losing-cat' %}">Blog Post</a></li>
-                <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
+                  <ul class="rd-navbar-nav">
+
+    <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'home' %}">Home</a></li>
+    <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'memorial' 'sandy' %}">Memorial</a></li>
+    <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'blog_post' year=2025 month=4 slug='healing-after-losing-cat' %}">Blog Post</a></li>
+    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
+    <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'login' %}">Login</a></li>
+                
               </ul>
             </div>
           </div>
