--- a/petmemorial/templates/registration/login.html
+++ b/petmemorial/templates/registration/login.html
@@ -1,16 +1,22 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}Login | Pet Heaven{% endblock %}
 
 {% block content %}
 <div class="container py-5">
-  <h2 class="mb-4">Login</h2>
+  <div class="text-center mb-4">
+    <img src="{% static 'images/logo.webp' %}" alt="Pet Heaven Online" style="height: 80px;">
+    <h2>Login</h2>
+  </div>
+
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
-<p class="mt-3">
-  <a href="{% url 'password_reset' %}">Forgot your password?</a>
-</p>
+
+  <p class="mt-3">
+    <a href="{% url 'password_reset' %}">Forgot your password?</a>
+  </p>
 </div>
 {% endblock %}
