--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -29,14 +29,32 @@
           </div>
           <div class="rd-navbar-main-element">
             <div class="rd-navbar-nav-wrap">
-                  <ul class="rd-navbar-nav">
+              <ul class="rd-navbar-nav">
 
-    <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'home' %}">Home</a></li>
-    <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'memorial' 'sandy' %}">Memorial</a></li>
-    <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'blog_post' year=2025 month=4 slug='healing-after-losing-cat' %}">Blog Post</a></li>
-    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
-    <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'login' %}">Login</a></li>
-                
+                <li class="rd-nav-item active"><a class="rd-nav-link" href="{% url 'home' %}">Home</a></li>
+                <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'memorial' 'sandy' %}">Memorial</a></li>
+                <li class="rd-nav-item"><a class="rd-nav-link" href="{% url 'blog_post' year=2025 month=4 slug='healing-after-losing-cat' %}">Blog Post</a></li>
+                <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
+
+                {% if user.is_authenticated %}
+                  <li class="rd-nav-item">
+                    <form method="post" action="{% url 'logout' %}" style="display:inline;">
+                      {% csrf_token %}
+                      <button type="submit" class="rd-nav-link btn btn-link p-0" style="border: none; background: none;">Logout</button>
+                    </form>
+                  </li>
+                  <li class="rd-nav-item">
+                    <a class="rd-nav-link" href="{% url 'create_memorial' %}">Create Memorial</a>
+                  </li>
+                {% else %}
+                  <li class="rd-nav-item">
+                    <a class="rd-nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
+                  <li class="rd-nav-item">
+                    <a class="rd-nav-link" href="{% url 'register' %}">Register</a>
+                  </li>
+                {% endif %}
+
               </ul>
             </div>
           </div>
